# qt-databinder

./: CMakeLists.txt  README.md
src/: asyncdatasetter.h  datanotifier.h  dataobserver.h  global.h  holdproperty.h  mutableproperty.h  observerproperty.h  propertybinder.h  variantcastutil.h  viewmodelbase.h
test/: CMakeLists.txt  main.cpp  pagea.cpp  pagea.h  pagea.ui  pageb.cpp  pageb.h  pageb.ui  singleinstance.cpp  singleinstance.h
